<resources>
    <string name="app_name">Demo_InstaForFood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reviews">Reviews</string>
    <string name="member_since">Member since October 2018 \n223 Reviews</string>
    <string name="rating">Rating</string>
    <string name="menu_item_rating">Menu Items Ratings</string>
    <string name="all_reviews">All Reviews</string>
    <string name="review_map">Review Map</string>
    <string name="all_results">All Results</string>
    <string name="top_rated">Top 5 Rated</string>
    <string name="see_all">See all</string>
    <string name="welcome">Welcome to ClientDex</string>
    <string name="enter_email">Enter your email address and password to continue</string>
    <string name="cancel">Cancel</string>
    <string name="photo">Photo</string>
    <string name="done">Done</string>
    <string name="library">Library</string>
    <string name="instagram">Instagram</string>
    <string name="video">Video</string>
    <string name="camera">Camera</string>
    <string name="password_hint">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="login">Log in</string>
    <string name="clients">Clients</string>
</resources>